--- a/org.eclipse.regexp.ui/plugin.xml
+++ b/org.eclipse.regexp.ui/plugin.xml
@@ -6,6 +6,7 @@
       <view
             category="org.eclipse.ui"
             class="org.eclipse.regexp.ui.view.RegularExpressionsView"
+            icon="icons/view16.png"
             id="org.eclipse.regexp.ui.view"
             name="Regular Expressions"
             restorable="true">
